# daqp

./: CMakePresets.json
interfaces/daqp-eigen/: CMakeLists.txt  daqp.cpp  daqp.hpp
interfaces/daqp-eigen/csv/: CMakeLists.txt  verify_set.cpp
interfaces/daqp-eigen/csv/data/: clik_tasks_A.csv  clik_tasks_bl.csv  clik_tasks_break_points.csv  clik_tasks_solution.csv
